<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense2_gazebo</name>
  <version>1.0.0</version>
  <description>Realsense2 simulated camera metapacakge</description>
  <license>Apache 2.0</license>

  <author email="azmyin12@gmail.com">Luis Camero</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>realsense2_gz</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
