<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense2_description</name>
  <version>1.0.0</version>
  <description> URDF, mesh and rviz files for Intel Realsense2 camera for simulated robots.</description>

  <license>Apache</license>

  <!-- Author -->
  <author email="azmyin12@gmail.com">Azmyin Md. Kamal</author>
  <maintainer email="azmyin12@gmail.com">Azmyin Md. Kamal</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Top-level mandatory dependencies -->
  <depend>realsense2_gazebo</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rqt_robot_monitor</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>